--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "nodemon src/index.ts"
   },
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.0",
     "@types/passport": "^1.0.12",
